Letter spacing fix.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -182,6 +182,7 @@ span.nav {
   line-height: 120%;
   text-shadow: 1px 1px 2px #666;
   margin-top: 20px;
+  letter-spacing: -5px;
 }
 
 #subheader {
